--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,8 @@ default: &default
 development:
   <<: *default
   database: sekaibook_development
+  password: password
+  host: db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
